# my-claude-plugins

./: .envrc  .gitignore  .issue  .project-init  CLAUDE.md  CONTRIBUTING.md  README.md  USAGE.md  compute-version.sh  flake.nix  pyproject.toml
plugins/dev-workflow-toolkit/: CHANGELOG.md  README.md  USAGE.md  pyproject.toml
plugins/dev-workflow-toolkit/.claude-plugin/: plugin.json
plugins/dev-workflow-toolkit/docs/: beads-setup.md  headless-patterns.md  spec-template.md
plugins/dev-workflow-toolkit/docs/architecture/: agent-oriented-design.md  spec-experiments.md  spec-rationale.md  vsa-foundations.md
plugins/dev-workflow-toolkit/hooks/: check-changelog.sh  check-version-bump.sh  direnv-post-checkout.sh  ensure-direnv-hook.sh  ensure-statusline.sh  hooks.json  langfuse-trace.py  langfuse-trace.sh  migrate-quality-gate.sh  post-checkout-fragment.sh  post-edit-formatter.sh  pre-commit-linter.sh  resist-memory-redirect.sh  test_langfuse_trace.py  test_langfuse_trace_sh.py
plugins/dev-workflow-toolkit/scripts/: bd-pipeline  check-review-documented.sh  compute-version.sh  compute_version.py  context-check  context-gate-hook.sh  context-thresholds.json  plan-to-beads.sh  plan_to_beads.py  quality-gate.sh  quality_gate.py  total-risk
plugins/dev-workflow-toolkit/skills/: SPEC.md  UPSTREAM-karpathy.md  UPSTREAM-superpowers.md
plugins/dev-workflow-toolkit/tests/: README.md  conftest.py  run-all.sh  test-integration.sh  test-project-init.sh  test-quality-gate.sh  test-setup-rag.sh  test_bd_pipeline.py  test_capability_guard.py  test_compute_version.py  test_compute_version_sh.py  test_context_check.py  test_direnv_hooks.py  test_formatter_linter_hooks.py  test_integration.py  test_migrate_quality_gate.py  test_plan_to_beads.py  test_quality_gate.py  test_resist_memory_redirect.py  test_structure.py  test_total_risk.py  test_version_hooks.py  validate-frontmatter.sh  validate-specs.sh
plugins/ssh-mcp/: .gitignore  .mcp.json  .project-init  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  flake.nix  pyproject.toml
plugins/ssh-mcp/.claude-plugin/: plugin.json
plugins/ssh-mcp/src/ssh_mcp/: __init__.py  (+1 more)
(+121 files in other folders)
