[project]
name = "my-claude-plugins"
version = "0.1.0"
description = "Personal Claude Code plugin marketplace"
requires-python = ">=3.13"
dependencies = [
    "langfuse>=3",
]

[dependency-groups]
dev = [
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0",
    "ruff",
    "tomli-w>=1.0.0",
]
