[project]
name = "dev-workflow-toolkit"
version = "1.4.0"
description = "Development workflow skills for Claude Code"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
