[project]
name = "dev-workflow-toolkit"
version = "1.18.9"
description = "Development workflow skills for Claude Code"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0",
    "tomli_w>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
]

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
