[project]
name = "ssh-mcp"
version = "0.2.0"
description = "MCP server exposing bash on remote hosts via system ssh"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ssh_mcp",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
